# Pairs-Trading-Statistical-Arbitrage-Strategy

./: .gitignore  README.md  Requirements.txt  pyproject.toml
data/processed/: adj_close_2018-01-01_to_today.parquet  pair_screening.parquet
notebooks/: 01_data_exploration_and_pair_selection.ipynb  02_backtest_and_results.ipynb  02_results.ipynb  03_walkforward_validation.ipynb  04_dynamic_hedge_ratios_kalman.ipynb
notebooks/data/cache/: adj_close_2016-01-01_to_today_NVDA-JPM-AMZN-META.csv
notebooks/outputs/: pair_AMZN_JPM_kalman_filters_backtest.csv  pair_AMZN_JPM_variant_stats.csv  portfolio_kalman_filters.csv  walkforward_oos_equity.csv  walkforward_oos_trades.csv  walkforward_window_summary.csv
reports/: backtest_summary.csv  figures  portfolio_equity.csv  report.md  technical_appendix.md
scripts/: run_pipeline.py
src/: images.py  plots.py
src/pairs_trading/: backtest.py  cli.py  config.py  data.py  metrics.py  plotting.py  signals.py  stats.py
